tests/NormalTests/paczka1/small_fuzzy/81806339.err
Error in line 2: ZfZP7Q S135 21,6
Error in line 1: 1wRNh6tzka S135 90,3
Error in line 3: ZfZP7Q A802 94,4
Error in line 4: 1wRNh6tzka A802 19,4
